// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-admin-token.json 1`] = `
{
  "_id": "esv-admin-token",
  "description": "Long-lived admin token",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_ADMIN_TOKEN}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-brando-pingone.json 1`] = `
{
  "_id": "esv-brando-pingone",
  "description": "This is to show the connection between PingOne and AIC. ",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_BRANDO_PINGONE}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-sean-test.json 1`] = `
{
  "_id": "esv-sean-test",
  "description": "",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_SEAN_TEST}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-secret-import-test1.json 1`] = `
{
  "_id": "esv-secret-import-test1",
  "description": "Secret Import Test 1",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_SECRET_IMPORT_TEST1}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-secret-import-test2.json 1`] = `
{
  "_id": "esv-secret-import-test2",
  "description": "Secret Import Test 2",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_SECRET_IMPORT_TEST2}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test-client-cert.json 1`] = `
{
  "_id": "esv-test-client-cert",
  "description": "Test HTTP Client client cert",
  "encoding": "pem",
  "useInPlaceholders": false,
  "valueBase64": "\${ESV_TEST_CLIENT_CERT}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test-secret.json 1`] = `
{
  "_id": "esv-test-secret",
  "description": "This is a test secret containing a simple string value.",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test-secret-cert-pem.json 1`] = `
{
  "_id": "esv-test-secret-cert-pem",
  "description": "This is a test secret from a pem encoded cert file.",
  "encoding": "pem",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_CERT_PEM}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test-secret-cert-pem-raw.json 1`] = `
{
  "_id": "esv-test-secret-cert-pem-raw",
  "description": "This is a test secret from a pem encoded cert file (raw).",
  "encoding": "pem",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_CERT_PEM_RAW}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test-secret-euler.json 1`] = `
{
  "_id": "esv-test-secret-euler",
  "description": "A test secret containing the value of Euler's number",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_EULER}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test-secret-file-base64hmac.json 1`] = `
{
  "_id": "esv-test-secret-file-base64hmac",
  "description": "This is a test secret from base64 encoded hmac key file.",
  "encoding": "base64hmac",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_FILE_BASE64HMAC}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test-secret-file-base64hmac-raw.json 1`] = `
{
  "_id": "esv-test-secret-file-base64hmac-raw",
  "description": "This is a test secret from base64 encoded hmac key file (raw).",
  "encoding": "base64hmac",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_FILE_BASE64HMAC_RAW}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test-secret-pi.json 1`] = `
{
  "_id": "esv-test-secret-pi",
  "description": "Secret that contains the value of pi",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_PI}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test-secret-pi-generic.json 1`] = `
{
  "_id": "esv-test-secret-pi-generic",
  "description": "",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_PI_GENERIC}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-volkers-test-secret.json 1`] = `
{
  "_id": "esv-volkers-test-secret",
  "description": "Volker's test secret",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_VOLKERS_TEST_SECRET}",
}
`;
